--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ djangorestframework = "^3.15.2"
 pillow = "^11.1.0"
 python-dotenv = "^1.0.1"
 psycopg2-binary = "^2.9.10"
+django-filter = "^25.1"
 
 
 [build-system]
