--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pillow = "^11.1.0"
 python-dotenv = "^1.0.1"
 psycopg2-binary = "^2.9.10"
 django-filter = "^25.1"
+djangorestframework-simplejwt = "^5.5.0"
 
 
 [build-system]
