--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ python-dotenv = "^1.0.1"
 psycopg2-binary = "^2.9.10"
 django-filter = "^25.1"
 djangorestframework-simplejwt = "^5.5.0"
+pytest-cov = "^6.0.0"
+coverage = "^7.7.1"
 
 
 [build-system]
