--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,64 +1,64 @@
-version: '3.9'
+version: '3.8'
 
 services:
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
-    env_file:
-      - .env
+    command: gunicorn config.wsgi:application --bind 0.0.0.0:8000
     volumes:
-      - .:/code
-      - static_volume:/code/static
+      - .:/lms
+      - static_volume:/lms/staticfiles
+      - static_files:/lms/static
+      - media_volume:/lms/media
     ports:
       - "8000:8000"
-    depends_on:
-      db:
-        condition: service_healthy
-
-  db:
-    image: postgres:16.0
     env_file:
       - .env
-    environment:
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_DB=${POSTGRES_NAME}
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-
-  redis:
-    image: redis:alpine
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-
-  celery:
-    build: .
-    command: celery -A config worker --loglevel=info
-    volumes:
-      - .:/code
     depends_on:
       - db
       - redis
 
-  celery-beat:
-    build: .
-    command: celery -A config beat --loglevel=info
+  db:
+    image: postgres:15
     volumes:
-      - .:/code
+      - postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - .env
+
+  redis:
+    image: redis:7.2.3
+    ports:
+      - "6379:6379"
+
+  celery:
+    build: .
+    command: celery -A config worker -l INFO
+    volumes:
+      - .:/lms
+      - static_volume:/lms/staticfiles
+      - static_files:/lms/static
+      - media_volume:/lms/media
+    env_file:
+      - .env
     depends_on:
+      - web
       - redis
 
-networks:
-  default:
+  celery-beat:
+    build: .
+    command: celery -A config beat -l INFO
+    volumes:
+      - .:/lms
+      - static_volume:/lms/staticfiles
+      - static_files:/lms/static
+      - media_volume:/lms/media
+    env_file:
+      - .env
+    depends_on:
+      - web
+      - redis
 
 volumes:
   postgres_data:
   static_volume:
-  redis_data:
+  static_files:
+  media_volume:
