fix for correct jobs in actions[4] Problems with dependencies incorrect include with "courses". Trying for "lms"

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["kopstant"]
 readme = "README.md"
 packages = [
     { include = "config" },
-    { include = "courses" },
+    { include = "lms" },
     { include = "users" },
     { include = "subscriptions" },
     { include = "payments" },
