--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,19 +31,27 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: '3.10'
+        python-version: '3.2'
         
     - name: Install Poetry
       run: |
         curl -sSL https://install.python-poetry.org | python3 -
-        
+        echo "$HOME/.local/bin" >> $GITHUB_PATH
+
     - name: Install Dependencies
       run: poetry install
-        
+
+    - name: Wait for PostgreSQL
+      run: sleep 5
+
     - name: Run Tests
       env:
-        DATABASE_URL: postgresql://django_user:django_password@localhost:5432/django_db
-        SECRET_KEY: test_secret_key
+        POSTGRES_NAME: django_drf_hw
+        POSTGRES_USER: postgres
+        POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
+        POSTGRES_HOST: localhost
+        POSTGRES_PORT: 5432
+        SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
         DEBUG: "True"
       run: |
         poetry run python manage.py test
