--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,21 @@ jobs:
     - name: Wait for PostgreSQL
       run: sleep 5
 
-    - name: Run Tests
+    - name: Check code formatting
+      run: |
+        black . --check
+    
+    - name: Run linter
+      run: |
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
+    - name: Build and start containers
+      run: |
+        docker-compose build
+        docker-compose up -d
+
+    - name: Run tests
       env:
         POSTGRES_NAME: django_drf_hw
         POSTGRES_USER: postgres
@@ -55,6 +69,9 @@ jobs:
         DEBUG: "True"
       run: |
         poetry run python manage.py test
+
+    - name: Stop containers
+      run: docker-compose down
 
   deploy:
     needs: test
