--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,29 @@ django-timezone-field = "^7.1"
 pytest = "^8.3.5"
 pytest-cov = "^6.0.0"
 coverage = "^7.7.1"
+black = "^25.1.0"
+flake8 = "^7.2.0"
+isort = "^6.0.1"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 127
+target-version = ['py311']
+include = '\.pyi?$'
+extend-exclude = '''
+# A regex preceded with ^/ will apply only to files and directories
+# in the root of the project.
+^/docs
+'''
+
+[tool.isort]
+profile = "black"
+line_length = 127
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
