--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,8 +62,8 @@ jobs:
 
     - name: Build and start containers
       run: |
-        docker-compose build
-        docker-compose up -d
+        docker compose build
+        docker compose up -d
 
     - name: Run tests
       env:
@@ -78,7 +78,7 @@ jobs:
         poetry run python manage.py test
 
     - name: Stop containers
-      run: docker-compose down
+      run: docker compose down
 
   deploy:
     needs: test
@@ -95,5 +95,5 @@ jobs:
         script: |
           cd /var/www/django_drf_hw
           git pull origin main
-          docker-compose down
-          docker-compose up -d --build 
+          docker compose down
+          docker compose up -d --build 
