--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,6 +60,23 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
+    - name: Create .env file
+      run: |
+        cat > .env << EOL
+        POSTGRES_DB=django_drf_hw
+        POSTGRES_USER=postgres
+        POSTGRES_PASSWORD=${{ secrets.DB_PASSWORD }}
+        POSTGRES_HOST=db
+        POSTGRES_PORT=5432
+        SECRET_KEY=${{ secrets.DJANGO_SECRET_KEY }}
+        DEBUG=True
+        ALLOWED_HOSTS=localhost,127.0.0.1
+        REDIS_HOST=redis
+        REDIS_PORT=6379
+        STRIPE_PUBLIC_KEY=${{ secrets.STRIPE_PUBLIC_KEY }}
+        STRIPE_SECRET_KEY=${{ secrets.STRIPE_SECRET_KEY }}
+        EOL
+
     - name: Build and start containers
       run: |
         docker compose build
