Testing correctly ssh-key for deploy

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "django-drf-hw"
 version = "0.1.0"
 description = "Django DRF Homework"
 authors = ["kopstant"]
-readme = "README.md"
+readme = "README.md" #File readme
 packages = [
     { include = "config" },
     { include = "lms" },
