--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -107,8 +107,10 @@ jobs:
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USERNAME }}
+        username: ${{ secrets.SERVER_USER }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
+        port: 22
+        debug: true
         script: |
           cd /var/www/django_drf_hw
           git pull origin main
