--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,8 +73,7 @@ jobs:
         ALLOWED_HOSTS=localhost,127.0.0.1
         REDIS_HOST=redis
         REDIS_PORT=6379
-        STRIPE_PUBLIC_KEY=${{ secrets.STRIPE_PUBLIC_KEY }}
-        STRIPE_SECRET_KEY=${{ secrets.STRIPE_SECRET_KEY }}
+        STRIPE_API_KEY=${{ secrets.STRIPE_API_KEY }}
         EOL
 
     - name: Build and start containers
